syntax = "proto3";

package user.v1;

option go_package = "genproto/v1;userv1";

service UserService {
  rpc GetUserByEmail(GetUserByEmailRequest) returns (GetUserByEmailResponse);
  rpc GetUserByID(GetUserByIDRequest) returns (GetUserByIDResponse);
  rpc CheckUserExistsByEmail(CheckUserExistsByEmailRequest) returns (CheckUserExistsByEmailResponse);
  rpc RegisterUser(RegisterUserRequest) returns (RegisterUserResponse);
  rpc GetAllUsers(GetAllUsersRequest) returns (GetAllUsersResponse);
}

message User {
  string id = 1;
  string email = 2;
  string password = 3;
}

message GetUserByEmailRequest {
  string email = 1;
}
message GetUserByEmailResponse {
  User user = 1;
}

message GetUserByIDRequest {
  string id = 1;
}
message GetUserByIDResponse {
  User user = 1;
}

message CheckUserExistsByEmailRequest {
  string email = 1;
}
message CheckUserExistsByEmailResponse {
  bool exists = 1;
}

message RegisterUserRequest {
  string email = 1;
  string password = 2;
}
message RegisterUserResponse {
  string id = 1;
}

message GetAllUsersRequest {}
message GetAllUsersResponse {
  repeated User users = 1;
}